<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#101010"
    android:padding="16dp"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="81dp"
            android:layout_height="53dp"
            android:layout_marginBottom="15dp"
            app:srcCompat="@drawable/img_1" />


        <TextView
            android:id="@+id/tvTitleScren"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Movie Search"
            android:paddingBottom="10dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/etActorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text"
            android:hint="Enter movie title"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/orange"
            android:paddingLeft="28dp"
            android:paddingRight="28dp"
            android:text="Search"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:cardBackgroundColor="#1B1B1B"
            app:cardCornerRadius="12dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textColor="#DDDDDD"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvRated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#DDDDDD"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvReleased"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#DDDDDD"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvRuntime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#DDDDDD"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvGenre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#DDDDDD"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvDirector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#DDDDDD"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvWriter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#DDDDDD"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvActors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#DDDDDD"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvPlot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:lineSpacingExtra="4dp"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
